<resources>
    <string name="app_name">Suit game V.2</string>
    <string name="logo_image">Logo image</string>
    <string name="title_player_1">Title player 1</string>
    <string name="title_player_com">Title player Com</string>
    <string name="option_rock_player_1">Option Rock Player 1</string>
    <string name="refresh_button">Refresh button</string>
    <string name="option_paper_player_1">Option Paper Player 1</string>
    <string name="option_scissor_player_1">Option Scissor Player 1</string>
    <string name="option_rock_computer">Option Rock Computer</string>
    <string name="option_paper_computer">Option Paper Computer</string>
    <string name="option_scissor_computer">Option Scissor Computer</string>
    <string name="result">Result</string>
</resources>