<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        android:contentDescription="@string/logo_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_tittle"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/ivTitlePlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/title_player_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:srcCompat="@drawable/ic_player1"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/ivTitlePlayerCom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/title_player_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:srcCompat="@drawable/ic_com"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/ivOptionRockP1"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/option_rock_player_1"
        app:layout_constraintEnd_toEndOf="@+id/ivTitlePlayer1"
        app:layout_constraintStart_toStartOf="@+id/ivTitlePlayer1"
        app:layout_constraintTop_toTopOf="@+id/glOne"
        app:srcCompat="@drawable/ic_rock" />

    <ImageView
        android:id="@+id/ivOptionPaperP1"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/option_paper_player_1"
        app:layout_constraintEnd_toEndOf="@+id/ivOptionRockP1"
        app:layout_constraintStart_toStartOf="@+id/ivOptionRockP1"
        app:layout_constraintTop_toBottomOf="@+id/ivOptionRockP1"
        app:srcCompat="@drawable/ic_paper" />

    <ImageView
        android:id="@+id/ivOptionScissorP1"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/option_scissor_player_1"
        app:layout_constraintEnd_toEndOf="@+id/ivOptionPaperP1"
        app:layout_constraintStart_toStartOf="@+id/ivOptionPaperP1"
        app:layout_constraintTop_toBottomOf="@+id/ivOptionPaperP1"
        app:srcCompat="@drawable/ic_scissor" />

    <ImageView
        android:id="@+id/ivRockCom"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/option_rock_computer"
        app:layout_constraintEnd_toEndOf="@+id/ivTitlePlayerCom"
        app:layout_constraintStart_toStartOf="@+id/ivTitlePlayerCom"
        app:layout_constraintTop_toTopOf="@+id/glOne"
        app:srcCompat="@drawable/ic_rock" />

    <ImageView
        android:id="@+id/ivPaperCom"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/option_paper_computer"
        app:layout_constraintEnd_toEndOf="@+id/ivRockCom"
        app:layout_constraintStart_toStartOf="@+id/ivRockCom"
        app:layout_constraintTop_toBottomOf="@+id/ivRockCom"
        app:srcCompat="@drawable/ic_paper" />

    <ImageView
        android:id="@+id/ivScissorCom"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/option_scissor_computer"
        app:layout_constraintEnd_toEndOf="@+id/ivPaperCom"
        app:layout_constraintStart_toStartOf="@+id/ivPaperCom"
        app:layout_constraintTop_toBottomOf="@+id/ivPaperCom"
        app:srcCompat="@drawable/ic_scissor" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="244dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="526dp" />

    <ImageView
        android:id="@+id/ivResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/result"
        app:layout_constraintBottom_toTopOf="@+id/glTwo"
        app:layout_constraintEnd_toStartOf="@+id/ivPaperCom"
        app:layout_constraintStart_toEndOf="@+id/ivOptionPaperP1"
        app:layout_constraintTop_toTopOf="@+id/glOne"
        app:srcCompat="@drawable/ic_versus" />

    <ImageView
        android:id="@+id/ivRefresh"
        android:layout_width="@dimen/_52sdp"
        android:layout_height="@dimen/_52sdp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/refresh_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_refresh"
        tools:ignore="RedundantDescriptionCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>